--- a/JoyToy_Webseite/index.html
+++ b/JoyToy_Webseite/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="header_container">
             <div>
-                <img src="./images/logo.png" alt="JoyToy Logo">
+                <img src="./images/Logo.png" alt="JoyToy Logo">
             </div>
             <div class="header_center">
                 <input type="search" id="searchbar">
