--- a/JoyToy_Webseite/index.html
+++ b/JoyToy_Webseite/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="header_container">
             <div>
-                <!-- <img src="./images/Logo.png" alt="JoyToy Logo"> -->
+               <a href="index.html"><img src="./images/Logo.png" alt="JoyToy Logo"></a>
             </div>
             <div class="header_center">
                 <input type="search" id="searchbar">
@@ -34,7 +34,7 @@
             <li><a href="aktion.html">Kindermode</a></li>
             <li><a href="aktion.html">Baby & more</a></li>
             <li><a href="aktion.html">Spielzeuge 2-8</a></li>
-            <li></li>
+            <li id="spacer"></li>
             <li id="wl"><a href="aktion.html">Wunschliste</a></li>
             <li id="wk"><a href="aktion.html">Warenkrob</a></li>
         </ul>
