--- a/JoyToy_Webseite/shop.html
+++ b/JoyToy_Webseite/shop.html
@@ -9,14 +9,14 @@
     <!--GoogleFonts-->
     
 
-    <meta name="description" content="Shop, Spielzeug, Baby, ">
-    <title>JoyToy-Willkommen</title>
+    <meta name="description" content="Shop, Spielzeug, Baby, Lego">
+    <title>JoyToy-Shop</title>
 </head>
 <body>
     <header>
         <div class="header_container">
             <div>
-                <img src="./images/Logo.png" alt="JoyToy Logo">
+               <a href="index.html"><img src="./images/Logo.png" alt="JoyToy Logo"></a>
             </div>
             <div class="header_center">
                 <input type="search" id="searchbar">
@@ -34,7 +34,7 @@
             <li><a href="aktion.html">Kindermode</a></li>
             <li><a href="aktion.html">Baby & more</a></li>
             <li><a href="aktion.html">Spielzeuge 2-8</a></li>
-            <li></li>
+            <li id="spacer"></li>
             <li id="wl"><a href="aktion.html">Wunschliste</a></li>
             <li id="wk"><a href="aktion.html">Warenkrob</a></li>
         </ul>
@@ -42,78 +42,121 @@
     <main class="s_main_content">
         <section class="s_main_section">
             <div id="artikel1">
-                <h3>Mit vielen coolen Figuren</h3>
-                <p>
-                    Beschreibung
-                </p>
-                <div class="version">
+                <div class="artikel_left">
+                    <h3>Ninjago Weihnachtsangebot</h3>
                     <img src="./images/bild1.jpg" alt="" name="ninjago">
+                </div>
+                <div class="artikel_right_top">
+                    <h3 id="preis">19,99 €</h3><br>
+                    <p>
+                        Beschreibung: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo excepturi consequatur repellendus doloribus quam.
+                    </p><br>
+                    <hr>
+                </div>
+                <div class="artikel_right_bot1">
                     <input type="text" id="buy">
+                </div>
+                <div class="artikel_right_bot2">
                     <button type="submit" id="wk_in"><label for="wk_in">Warenkrob</label></button>
                     <button type="submit" id="wl_in"><label for="wl_in">Wunschliste</label></button>
                 </div>
             </div>
-
             <div id="artikel2">
-                <h3>Mit vielen coolen Figuren</h3>
-                <p>
-                    Beschreibung
-                </p>
-                <div class="version">
-                    <img src="./images/bild2.png" alt="" name="ninjago">
+                <div class="artikel_left">
+                    <h3>Ninjago Weihnachtsangebot</h3>
+                    <img src="./images/bild1.jpg" alt="" name="ninjago">
+                </div>
+                <div class="artikel_right_top">
+                    <h3 id="preis">19,99 €</h3><br>
+                    <p>
+                        Beschreibung: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo excepturi consequatur repellendus doloribus quam.
+                    </p><br>
+                    <hr>
+                </div>
+                <div class="artikel_right_bot1">
                     <input type="text" id="buy">
+                </div>
+                <div class="artikel_right_bot2">
                     <button type="submit" id="wk_in"><label for="wk_in">Warenkrob</label></button>
                     <button type="submit" id="wl_in"><label for="wl_in">Wunschliste</label></button>
                 </div>
             </div>
-
             <div id="artikel3">
-                <h3>Mit vielen coolen Figuren</h3>
-                <p>
-                    Beschreibung
-                </p>
-                <div class="version">
-                    <img src="./images/bild3.jpg" alt="" name="ninjago">
+                <div class="artikel_left">
+                    <h3>Ninjago Weihnachtsangebot</h3>
+                    <img src="./images/bild1.jpg" alt="" name="ninjago">
+                </div>
+                <div class="artikel_right_top">
+                    <h3 id="preis">19,99 €</h3><br>
+                    <p>
+                        Beschreibung: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo excepturi consequatur repellendus doloribus quam.
+                    </p><br>
+                    <hr>
+                </div>
+                <div class="artikel_right_bot1">
                     <input type="text" id="buy">
+                </div>
+                <div class="artikel_right_bot2">
                     <button type="submit" id="wk_in"><label for="wk_in">Warenkrob</label></button>
                     <button type="submit" id="wl_in"><label for="wl_in">Wunschliste</label></button>
                 </div>
             </div>
-
             <div id="artikel4">
-                <h3>Mit vielen coolen Figuren</h3>
-                <p>
-                    Beschreibung
-                </p>
-                <div class="version">
-                    <img src="./images/bild3.jpg" alt="" name="ninjago">
+                <div class="artikel_left">
+                    <h3>Ninjago Weihnachtsangebot</h3>
+                    <img src="./images/bild1.jpg" alt="" name="ninjago">
+                </div>
+                <div class="artikel_right_top">
+                    <h3 id="preis">19,99 €</h3><br>
+                    <p>
+                        Beschreibung: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo excepturi consequatur repellendus doloribus quam.
+                    </p><br>
+                    <hr>
+                </div>
+                <div class="artikel_right_bot1">
                     <input type="text" id="buy">
+                </div>
+                <div class="artikel_right_bot2">
                     <button type="submit" id="wk_in"><label for="wk_in">Warenkrob</label></button>
                     <button type="submit" id="wl_in"><label for="wl_in">Wunschliste</label></button>
                 </div>
             </div>
-
             <div id="artikel5">
-                <h3>Mit vielen coolen Figuren</h3>
-                <p>
-                    Beschreibung
-                </p>
-                <div class="version">
-                    <img src="./images/bild5.jpg" alt="" name="ninjago">
-                    <input type="number" id="buy">
+                <div class="artikel_left">
+                    <h3>Ninjago Weihnachtsangebot</h3>
+                    <img src="./images/bild1.jpg" alt="" name="ninjago">
+                </div>
+                <div class="artikel_right_top">
+                    <h3 id="preis">19,99 €</h3><br>
+                    <p>
+                        Beschreibung: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo excepturi consequatur repellendus doloribus quam.
+                    </p><br>
+                    <hr>
+                </div>
+                <div class="artikel_right_bot1">
+                    <input type="text" id="buy">
+                </div>
+                <div class="artikel_right_bot2">
                     <button type="submit" id="wk_in"><label for="wk_in">Warenkrob</label></button>
                     <button type="submit" id="wl_in"><label for="wl_in">Wunschliste</label></button>
                 </div>
             </div>
-
             <div id="artikel6">
-                <h3>Mit vielen coolen Figuren</h3>
-                <p>
-                    Beschreibung
-                </p>
-                <div class="version">
-                    <img src="./images/bild6.jpg" alt="" name="ninjago">
+                <div class="artikel_left">
+                    <h3>Ninjago Weihnachtsangebot</h3>
+                    <img src="./images/bild1.jpg" alt="" name="ninjago">
+                </div>
+                <div class="artikel_right_top">
+                    <h3 id="preis">19,99 €</h3><br>
+                    <p>
+                        Beschreibung: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo excepturi consequatur repellendus doloribus quam.
+                    </p><br>
+                    <hr>
+                </div>
+                <div class="artikel_right_bot1">
                     <input type="text" id="buy">
+                </div>
+                <div class="artikel_right_bot2">
                     <button type="submit" id="wk_in"><label for="wk_in">Warenkrob</label></button>
                     <button type="submit" id="wl_in"><label for="wl_in">Wunschliste</label></button>
                 </div>
